--- a/ocmoni6/styles/css/common.css
+++ b/ocmoni6/styles/css/common.css
@@ -387,4 +387,7 @@ td input[type=text],td select{
     border-color: dodgerblue;
 }
 /*分页相关的样式 end*/
+.oper_item a,a.oper_item{
+    color:#333;
+}
 
