--- a/brand1/styles/css/common.css
+++ b/brand1/styles/css/common.css
@@ -1,5 +1,5 @@
 #test{
-    height: 1000px;
+    height: 3000px;
     width: 100%;
     background-color: #1d5987;
 }
@@ -391,4 +391,16 @@ td input[type=text],td select{
 .oper_item a,a.oper_item{
     color:#333;
 }
+/*headroom插件 start*/
+.headroom {
+    will-change: transform;
+    transition: transform 500ms linear;
+}
+.headroom--pinned {
+    transform: translateY(0%);
+}
+.headroom--unpinned {
+    transform: translateY(-100%);
+}
+/*headroom插件 end*/
 
