--- a/ocmoni6/styles/css/common.css
+++ b/ocmoni6/styles/css/common.css
@@ -390,4 +390,15 @@ td input[type=text],td select{
 .oper_item a,a.oper_item{
     color:#333;
 }
-
+/*headroom插件 start*/
+.headroom {
+    will-change: transform;
+    transition: transform 500ms linear;
+}
+.headroom--pinned {
+    transform: translateY(0%);
+}
+.headroom--unpinned {
+    transform: translateY(-100%);
+}
+/*headroom插件 end*/
