--- a/brand1/styles/css/brand_query.css
+++ b/brand1/styles/css/brand_query.css
@@ -1,40 +1,38 @@
-/*.brand_title{
+.brand_title{
+    font-size: 12px;
+}
+.brand_title .left {
     display: block;
-    box-sizing: border-box;
-    padding: 0;
-    width: 100%;
-}*/
-.brand_list .title_left{
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 0 10px;
-    margin: 0;
+    float: left;
     width: 210px;
-    font-size: 14px;
     cursor: pointer;
-    /*outline: 1px solid red;*/
-    vertical-align: top;
+    padding-right: 10px;
 }
-
-.brand_list .title_content{
-    display: inline-block;
-    box-sizing: border-box;
-    width: auto;
-    font-size: 14px;
-    border-left: 1px solid #E7E7E7;
-   /* padding-left: 10px;*/
-    margin: 0;
-    /*outline: 1px solid red;*/
-}
-
-.brand_list .title_right{
-    display: inline-block;
-    box-sizing: border-box;
-    font-size: 14px;
-    margin: 0;
-    width: 100px;
+.brand_title .right {
+    display: block;
+    float: right;
+    width: 120px;
     text-align: right;
-    vertical-align: top;
-
 }
-
+.brand_title .center {
+    display: block;
+    margin-left: 210px;
+    margin-right: 120px;
+    width: auto;
+    text-align: left;
+    border-left: 1px solid #E7E7E7;
+    padding-left: 10px;
+  /*  outline: 1px solid red;*/
+}
+.brand_title .left input[type=checkbox]{
+    vertical-align: middle;
+    margin: 0;
+    padding: 0;
+    margin-top: -2px;
+}
+.brand_title .left .glyphicon{
+    font-size: 12px;
+}
+.brand_title .left .descr{
+    margin-top: 1px;
+}
