--- a/brand1/styles/css/brand_query.css
+++ b/brand1/styles/css/brand_query.css
@@ -1,3 +1,9 @@
+.brand_group .panel-body{
+    padding: 0;
+}
+.brand_group{
+    margin-bottom: 10px;
+}
 .brand_title{
     font-size: 12px;
 }
@@ -65,9 +71,7 @@
     width: 50px;
     background: url("../images/products/CZ.jpg");
 }
-.brand_group{
-    padding: 0;
-}
+
 .brand_list{
     height: 80px;
     box-sizing: border-box;
