--- a/brand1/styles/css/brand_query.css
+++ b/brand1/styles/css/brand_query.css
@@ -5,6 +5,7 @@
     margin-bottom: 10px;
 }
 .brand_title{
+    position: relative;
     font-size: 12px;
 }
 .brand_title:after{
@@ -12,6 +13,19 @@
     content: '';
     clear: both;
 }
+/**/
+.brand_title .descrInfo{
+    display: inline-block;
+    position: absolute;
+    width: 300px;
+    height: 90px;
+    top: -95px;
+    left: 50px;
+    z-index: 9999;
+    border: 1px solid black;
+}
+
+
 .brand_title .left {
     display: block;
     float: left;
@@ -50,7 +64,7 @@
 .brand_title .left .glyphicon{
     font-size: 12px;
 }
-.brand_title .left .descr{
+.brand_title .left .descrImg{
     margin-top: 1px;
 }
 
