--- a/brand1/styles/css/brand_query.css
+++ b/brand1/styles/css/brand_query.css
@@ -44,7 +44,9 @@
     float: right;
     width: 120px;
     text-align: right;
+    font-size: 14px;
 }
+
 .brand_title .center {
     display: block;
     margin-left: 210px;
