--- a/brand1/styles/css/brand_query.css
+++ b/brand1/styles/css/brand_query.css
@@ -7,6 +7,8 @@
 .brand_title{
     position: relative;
     font-size: 12px;
+    height: 25px;
+    line-height: 25px;
 }
 .brand_title:after{
     display: table;
@@ -65,8 +67,10 @@
 .brand_title .left .glyphicon{
     font-size: 12px;
 }
-.brand_title .left .descrImg{
-    margin-top: 1px;
+.brand_title .right .btn{
+    height:25px;
+    padding: 1px 5px;
+    margin: 0;
 }
 
 .brand_img{
