--- a/brand1/styles/css/brand_query.css
+++ b/brand1/styles/css/brand_query.css
@@ -7,7 +7,7 @@
 .brand_title{
     position: relative;
     font-size: 12px;
-    height: 25px;
+   /* height: 25px;*/
     line-height: 25px;
 }
 .brand_title:after{
