--- a/ocmoni6/styles/css/common.css
+++ b/ocmoni6/styles/css/common.css
@@ -266,7 +266,11 @@ ul{
     border:1px solid #EFEFEF;
     border-radius:3px;
     background-color:#FFF;
-    overflow: hidden;
+}
+.table_layout:after{
+    clear: both;
+    display: table;
+    content: '';
 }
 .table_layout table{
     border-top:1px solid #DDD;
@@ -508,7 +512,4 @@ span.service_type_F,span.service_type_M,span.delete_service{ height:20px; width:
     border-left:0 none;
 }
 /**服务选择相关css end*/
-.position_relative{
-    position: relative;
-}
 
