--- a/ocmoni6/styles/css/oc_edit.css
+++ b/ocmoni6/styles/css/oc_edit.css
@@ -83,9 +83,8 @@
     padding-left: 2px;
 }
 .service_list ul li, .service_last_list ul li {
+    height: 24px;
     line-height:24px;
-    margin-top:1px;
-    padding:0 5px;
     border-bottom:1px solid #F1F1F1;
     cursor:pointer;
 }
@@ -94,6 +93,11 @@
 }
 .service_list ul li {
     background:url("../images/iconsprite.png") no-repeat scroll right -105px rgba(0, 0, 0, 0);
+}
+.service_list ul li:after{
+    content: '';
+    display: table;
+    clear: both;
 }
 .service_list ul li.bg_gray,
 .service_last_list ul li.bg_gray {
@@ -105,17 +109,28 @@
 .service_last_list ul li.selected {
     background-color:#C9D1DC;
 }
-.service_name{ padding-left:5px; width:190px;}
-.service_name:after{
-    clear:both;
+.choose_li_span{
+    display: inline-block;
+    overflow:hidden;
 }
-.service_name p,.chose_service_name{ overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
-.service_name p{ max-width:150px;margin-bottom:0;}
-.chose_service_name{ max-width:156px;}
-span.service_type_F,span.service_type_M,span.delete_service{ height:20px; width:15px; background-image:url("../images/iconsprite.png"); background-repeat:no-repeat;}
-.serviceTypeSpan{ background-color: #FBC; width: 13px; height: 13px; font-size: 10px; line-height: 13px; text-align: center; margin: 5px 0 0 5px; border-radius: 20px;}
-.service_list ul li.choose4li{ background-image:none;}
-
+.choose_service_name{
+    max-width:156px;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
+.serviceTypeSpan{
+    background-color: #FBC;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    font-size: 10px;
+    border-radius: 20px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+.service_list ul li.choose4li{
+    background-image:none;
+}
 .choose_box_right {
     border-left:0 none;
 }
