--- a/ocmoni6_2/html/index.css
+++ b/ocmoni6_2/html/index.css
@@ -77,3 +77,19 @@ table.table_records7 tr label{
     padding: 0;
     vertical-align: middle;
 }
+
+.marginRL2{
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+.query_row .title{
+    font-weight: 700;
+}
+.query_row .glyphicon-calendar{
+    opacity:0.7;
+}
+
+.ts90{
+    transform:rotate(90deg);
+}
