--- a/ocmoni6_3/html/index.css
+++ b/ocmoni6_3/html/index.css
@@ -1,3 +1,4 @@
+/**records7 relevant start*/
 .table_records7 .descr{
     display: inline-block;
     width: 100px;
@@ -16,27 +17,25 @@
 .table_records7 .tbtitle{
     display: block;
 }
-
-table.table_records7 tr th{
+.table_records7 tr th{
     padding: 8px 2px;
     background-color: #8AD0EE;
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
 }
-table.table_records7 tr td{
+.table_records7 tr td{
     padding: 4px 2px;
     padding-bottom: 0px;
     text-align: center;
 }
-table.table_records7 input[type="checkbox"]{
+.table_records7 input[type="checkbox"]{
     vertical-align: middle;
     margin: 0px;
 }
 .table_records7 tbody tr:hover{
     background-color:#ECF1EF ;
 }
-
 @media screen and (min-width: 1250px) {
     .table_records7 .tbtitle{
         display: inline-block;
@@ -45,20 +44,59 @@ table.table_records7 input[type="checkbox"]{
         top: 30%;
     }
 }
-table.table_records7 tr th i{
+.table_records7 tr th i{
     display: none;
 }
-table.table_records7 tr th:hover i{
+.table_records7 tr th:hover i{
     display: block;
 }
-table.table_records7 tr th i.active{
+.table_records7 tr th i.active{
     display: block;
 }
 
-table.table_records7 tr label{
+.table_records7 tr label{
     margin: 0;
     padding: 0;
     cursor: pointer
+}
+/**records7 relevant end*/
+
+
+
+/**common relevant start*/
+.marginRL2{
+    margin-left: 2px;
+    margin-right: 2px;
+}
+.ts90{
+    transform:rotate(90deg);
+}
+/**common relevant end*/
+
+/**head relevant start*/
+.query_row .title{
+    font-weight: 700;
+}
+.query_row .glyphicon-calendar{
+    opacity:0.7;
+}
+.header-container{
+    width: 100%;
+    height: 105px;
+    overflow: hidden;
+}
+/**head relevant end*/
+
+/**page relevant start*/
+.pageSum_desc input[type="checkbox"]{
+    margin: 0;
+    padding: 0;
+    vertical-align: middle;
+}
+.page-desc .pagesize{
+    display: inline-block;
+    height: 23px;
+    width: 50px;
 }
 .pageSum_desc{
     display: inline-block;
@@ -69,39 +107,8 @@ table.table_records7 tr label{
 .pageSum_desc label{
     margin: 0;
     padding: 0;
-    vertical-align: middle; 
+    vertical-align: middle;
     margin-left: 5px;
     cursor: pointer;
 }
-.pageSum_desc input[type="checkbox"]{
-    margin: 0;
-    padding: 0;
-    vertical-align: middle;
-}
-
-.marginRL2{
-    margin-left: 2px;
-    margin-right: 2px;
-}
-
-.query_row .title{
-    font-weight: 700;
-}
-.query_row .glyphicon-calendar{
-    opacity:0.7;
-}
-
-.ts90{
-    transform:rotate(90deg);
-}
-
-.header-container{
-    width: 100%;
-    height: 105px;
-    overflow: hidden;
-}
-.page-desc .pagesize{
-    display: inline-block;
-    height: 23px;
-    width: 50px;
-}
+/**page relevant end*/
