--- a/ocmoni6_3/html/index.css
+++ b/ocmoni6_3/html/index.css
@@ -12,7 +12,7 @@ table.table_records7 .relative{
 table.table_records7 .tb_order{
     position: absolute;
     right: 2px;
-    top: 36%;
+    top: 26%;
 }
 table.table_records7 .tbtitle{
     display: block;
@@ -41,7 +41,7 @@ table.table_records7 tbody tr:hover{
         display: inline-block;
     }
     table.table_records7 .tb_order{
-        top: 30%;
+        top: 16%;
     }
 }
 table.table_records7 tr th i{
@@ -59,6 +59,12 @@ table.table_records7 tr label{
     padding: 0;
     cursor: pointer
 }
+table.table_records7 .s5descr{
+    padding-left: 2px;
+    opacity:0.7;
+}
+
+
 /**records7 relevant end*/
 
 /**common relevant start*/
@@ -110,3 +116,19 @@ table.table_records7 tr label{
     cursor: pointer;
 }
 /**page relevant end*/
+.copy_icon{
+    display: inline-block;
+    height: 14px;
+    width: 14px;
+    background-image: url(../styles/images/copy.png);
+    background-size:100%;
+}
+
+.ttt{
+    display: inline-block;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    width: 100%;
+}
+
