--- a/ocmoni6_3/styles/iconfont/demo.css
+++ b/ocmoni6_3/styles/iconfont/demo.css
@@ -87,3 +87,5 @@ table { border-collapse: collapse; border-spacing: 0; }
 .icon_lists .icon:hover{
   font-size: 100px;
 }
+
+svg { fill: #a94442; }
