--- a/codeshare/style.css
+++ b/codeshare/style.css
@@ -8,11 +8,12 @@ body{
     padding: 0px;
     min-width: 1150px;
     font-size: 12px;
+    font-family: "微软雅黑";
 }
 .container{
-    margin: 10px auto;
+    margin: 0px auto;
     padding: 0px;
-    width: 98%;
+    width: 100%;
 }
 .query_section{
     display: block;
@@ -43,7 +44,6 @@ body{
 .query_list{
     display: block;
     padding: 0 20px;
-    padding-right: 0px;
 }
 .query_list thead{
     background-color: #EEE;
@@ -88,4 +88,25 @@ body{
 .form-horizontal .iconfont_box{
     padding-top: 7px;
     margin-left: -35px ;
+}
+.query_row .input-sm{
+    height: 25px;
+    padding:2px 2px;
+}
+.query_row .btn-sm{
+    height: 25px;
+    padding: 2px 10px;
+}
+.icon {
+    width: 2em; height: 2em;
+    vertical-align: -0.5em;
+    fill: currentColor;
+    overflow: hidden;
+}
+.navbar{
+    margin-bottom: 0px;
+}
+.pagebar_btn{
+    height: 25px;
+    padding: 1px 5px;
 }
