--- a/codeshare/style.css
+++ b/codeshare/style.css
@@ -24,6 +24,7 @@ body{
     display: block;
     padding: 2px 0px;
     min-width: 1071px;
+    /*margin: 2px 0px;*/
 }
 .query_section .control-label{
    font-weight: 100;
@@ -56,6 +57,9 @@ body{
     display: inline-block ;
     height: 35px;
     line-height: 35px;
+}
+.mtop3{
+    margin-top: 3px;
 }
 .page_custome input{
     display: inline-block;
