--- a/codeshare/style.css
+++ b/codeshare/style.css
@@ -18,7 +18,7 @@ body{
 .query_section{
     display: block;
     background-color: #F7F7F7;
-    padding: 10px;
+    padding: 10px 20px;
 }
 .query_section .query_row{
     display: block;
@@ -66,6 +66,7 @@ body{
     width: 50px;
     height: 23px;
     border-radius: 4px;
+    vertical-align: middle;
 }
 .iconfont_box{
     margin-left: -25px ;
@@ -121,4 +122,7 @@ body{
     display: inline-block;
     color: red;
     padding-top: 7px;
+}
+.oper_section .btn{
+    margin-right: 5px;
 }
