--- a/codeshare/style.css
+++ b/codeshare/style.css
@@ -61,13 +61,13 @@ body{
 .mtop3{
     margin-top: 3px;
 }
-.page_custome input{
+/*.page_custome input{
     display: inline-block;
     width: 50px;
     height: 23px;
     border-radius: 4px;
     vertical-align: middle;
-}
+}*/
 .iconfont_box{
     margin-left: -25px ;
     cursor: pointer;
@@ -111,9 +111,11 @@ body{
 .navbar{
     margin-bottom: 0px;
 }
-.pagebar_btn{
+.page_custome .pagebar_btn{
     height: 25px;
     padding: 1px 5px;
+    vertical-align: middle;
+    margin-top: -3px;
 }
 .red{
     color: red;
@@ -129,4 +131,28 @@ body{
 .form-group .control-label{
     margin-right: 15px;
     padding-right: 10px;
+}
+.common_input{
+    display: inline-block;
+    height: 25px;
+    padding: 3px 6px;
+    font-size: 14px;
+    line-height: 1;
+    width: 100%;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+.common_input:focus{
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
